--- a/templates/AboutUs.html
+++ b/templates/AboutUs.html
@@ -87,7 +87,7 @@
                                                             <span class="overlay"></span>
                                 
                                                             <div class="card-image">
-                                                                <img src="{% static 'images/avatar/avatar2.jpg'%}" alt="" class="card-img">
+<!--                                                                 <img src="{% static 'images/avatar/avatar2.jpg'%}" alt="" class="card-img"> -->
                                                             </div>
                                                         </div>
                                 
